Se programa logica para hacer pull del menu al tocar la parte lateral izquierda de la pantalla

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
@@ -73,6 +73,11 @@
 			</div>
 		</div>	
 		
+		<div id="wrapperMPull" class="page" style="z-index:4; left: 0; width:50px; height: 100%; filter:alpha(opacity=0); opacity:0.0;" >
+			&nbsp;
+		</div>	
+		
+		
 		<footer>
 		</footer>
 
@@ -119,6 +124,9 @@
 			});
 			
 			$('#wrapperM > .scroller > .container').css('height', $(window).height() + 'px');
+		
+		
+				_fInitMenu();
 				
 		</script>
 
