--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
@@ -18,10 +18,14 @@
 	</head>
 	
 	<body class="content-init" style="position: fixed;">
-		<img id="splash"  src="img/splash/splash.png" height="100%" width="100%"/>
-		<div id="mloading" style="position: absolute; top:50%; width: 100%;  text-align: center; font-size: 1.4em; color: #3E79C4; z-index: 10;">
+		
+			
+		<img id="splash"  src="img/splash/splash.png" height="100%" width="100%" >
+		
+		
+		<!--div id="mloading" style="position: absolute; top:50%; width: 100%;  text-align: center; font-size: 1.4em; color: #3E79C4; z-index: 10;">
 			<span>- Cargando -</span>
-		</div>
+		</div--->
 
 		<header>
 
@@ -110,8 +114,8 @@
         
         <script type="text/javascript">              
             app.initialize();
-            $('#splash').hide();
-			$('#mloading').remove();
+            /*$('#splash').hide();
+			$('#mloading').remove();*/
 			$('header').removeClass('hidden');	
 			$('.menu').removeClass('hidden');
         </script>
