--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/offline.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/offline.html
@@ -2,5 +2,10 @@
 <html lang="es">
 	<body>
 		<h1>No hay noticias disponibles</h1>		
-	</body>	
+	</body>
+
+	<script type="text/javascript">
+		$('#splash').hide();
+	</script>
+		
 </html>
