Nuevos iconos, imagen offline y validacion de height footer en home

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/animate.css">
 		<link rel="stylesheet" href="fonts/iconvault/iconvault-preview.css">				
+		<link rel="stylesheet" href="fonts/iconvault2/iconvault-preview.css">
 		<link rel="stylesheet" href="css/transition.css">
 		<link rel="stylesheet" href="css/main.css">
 	</head>
