--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/noticias.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/noticias.html
@@ -20,7 +20,14 @@
 		
 		<script type="text/javascript">		
 			var myScroll = new IScroll('#wrapper',{click:true,preventDefault:true, directionLockThreshold:20});
-			myScroll.on('beforeScrollStart', function () { 
+			myScroll.on('beforeScrollStart', function () {
+				
+				if ($('main').data('index') == 0) {
+					$('#wrapper').css('bottom','55px');
+				} else {
+					$('#wrapper').css('bottom','0');
+				}
+				 
 				this.refresh();		
 			});	
 
