--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/offline.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/offline.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 	<body>
-		<h1>No hay noticias disponibles</h1>		
+		<img src="img/splash/splash_offline.png" height="100%" width="100%" >
+		<!--h1>No hay noticias disponibles</h1-->			
 	</body>
-
-	<script type="text/javascript">
-		$('#splash').hide();
-	</script>
-		
 </html>
