--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/offline.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/offline.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 	<body>
-		<img src="img/splash/splash_offline.png" height="100%" width="100%" >
-		<!--h1>No hay noticias disponibles</h1-->			
-	</body>
+		<img class="splash offline" src="img/splash/splash_offline.png" style="width: 100%; height: auto;" >
+		<h3 class="splash text offline" style="position: absolute; top:50%; width: 100%;  text-align: center;">Conexi&oacute;n no disponible</h3>
+		<script type="text/javascript">
+			$('img.splash').css('width','100%');						
+			$('img.splash').css('height',$(window).height() + 'px');
+		</script>			
+	</body
 </html>
