--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
@@ -64,7 +64,7 @@
 			</div>			
 		</header>
 
-		<main>&nbsp;</main>
+		<main class="animated">&nbsp;</main>
 
 		<div id="wrapperM" class="page" style="z-index:3; left: -100%; height: 100%;" >
 			<div class="scroller">				
