NoticiasTVN: Cambios para que los URL de stream se cargen por configuracion de BD TVMax: cambios que faltaban por subir y tambien se mueve los URL de stream a una configuracion de BD

--- a/NoticiasTVN/NoticiasTVN/platforms/iphone/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/iphone/www/index_tvn.html
@@ -229,7 +229,7 @@
 				
 				<img class="icon back" src="img/icon/back.png" style="float: left; width:10%; height:100%; max-width:88px;  max-height:55px; vertical-align: middle; display:none;  " alt="Back"  />
 				<img class="icon logo" src="img/icon/logoTvnLast.png" style="float: left; width: auto; height:100%;   max-width:184px;  max-height:64px; vertical-align: middle;  " alt="Tvn Noticias"  />
-				<span id="header-title" style="position:relative;display:inline-block;width:55%;">NACIONALES</span>								
+				<span id="header-title" style="position:relative;display:inline-block;width:55%;height:77px;"></span>								
 				<img class="icon tv" src="img/icon/tv.png" style="float: right; width: 20%; height:100%; max-width:140px; max-height:77px;" alt="Tv"   />
 				<img class="icon share" src="img/icon/share.png" style="float: right; width: 20%; height:100%; max-width:140px; max-height:77px; display: none;" alt="Share"   />
 				
