Nuevas pantallas y listas favoritos y posts

--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/index.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/index.html
@@ -40,12 +40,16 @@
 			<div class="container">
 				
 				<div class="row">					
-					<div class="col-md-12" style="text-align: center;">
+					<div class="col-md-12" data-touch="load" data-target="0" >
 						<img src="img/agatadodia.svg" onerror="this.src='img/agatadodia.png'" alt="a gata do dia" style="width:75%; height: auto;">				
 					</div>
 				</div>
 				
 				<div class="row">
+			
+					<div class="col-md-12" data-touch="load" data-target="1" >
+						<span>Meu favorito</span>
+					</div>
 			
 					<!--div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" >
 						<span>Salao de Fama</span>
