Actualizaciones y desarollos varios

--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/index.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/index.html
@@ -47,8 +47,12 @@
 				
 				<div class="row">
 			
-					<div class="col-md-12" data-touch="load" data-target="1" >
+					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" data-touch="load" data-target="1" >
 						<span>Meu favorito</span>
+					</div>
+					
+					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" data-touch="load" data-target="4" >
+						<span>Salao de Fama</span>
 					</div>
 			
 					<!--div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" >
