--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/favorites.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/favorites.html
@@ -4,7 +4,7 @@
 		
 		<div id="wrapper">
 			<div class="scroller">
-				<div class="container-fluid">
+				<div class="container">
 				</div>				
 			</div>	
 		</div>
