--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/hall-of-fame.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/hall-of-fame.html
@@ -9,7 +9,7 @@
 			</div>	
 		</div>
 		
-		<script type="text/javascript" src="js/categories.js"></script>
+		<script type="text/javascript" src="js/hall-of-fame.js"></script>
 		<script type="text/javascript">
 			var _scroll = new IScroll('#wrapper',{click:true,preventDefault:true});
 			_scroll.on('beforeScrollStart', function () {
