--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/categories.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/categories.html
@@ -10,13 +10,13 @@
 			</div>	
 		</div>
 		
-		<div id="wrapper2" class="page" style="left: 100%;">
+		<!--div id="wrapper2" class="page" style="left: 100%;">
 			<div class="scroller">						
 				<div class="container">
-					<!-- here code-->
+					
 				</div>
 			</div>	
-		</div>
+		</div-->
 		
 		
 		<script type="text/javascript" src="js/categories.js"></script>
@@ -30,10 +30,19 @@
 			});	
 			
 			
-			var _scroll2 = new IScroll('#wrapper2',{click:true, preventDefault:true, bounce:false});
+			/*var _scroll2 = new IScroll('#wrapper2',{
+					scrollX: true,
+					scrollY: false,					
+					preventDefault:true, 
+					bounce:false,
+					momentum: false,
+					snap: true,
+					snapSpeed: 400
+				});
+			
 			_scroll2.on('beforeScrollStart', function () { 
 				this.refresh();		
-			});
+			});*/
 			
 			
 		</script>
