Actializaciones varias del idioma, se agrega terms

--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/home.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/home.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="pt">
 	<body>
 		
-		<div id="wrapper">
+		<div id="wrapper" >
 			<div class="scroller">
 				<div class="container">
 					<!-- here code-->
