--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/posts.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/posts.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="pt">
 	<body>
 		
 		<div id="wrapper">
 			<div class="scroller">
 				<div class="container">
 				</div>				
-			</div>	
+			</div>
+			
+			 <!-- Controls -->
+		  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+		    <span class="glyphicon glyphicon-chevron-left"></span>
+		  </a>
+		  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+		    <span class="glyphicon glyphicon-chevron-right"></span>
+		  </a>
+				
 		</div>
+		
+		
 		
 		<script type="text/javascript" src="js/posts.js"></script>
 		<script type="text/javascript">
