Se agrega base del menu, lista de post a partir del culito

--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/categories.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/categories.html
@@ -25,8 +25,8 @@
 												 
 			var _scroll = new IScroll('#wrapper',{click:true,preventDefault:true});
 			_scroll.on('beforeScrollStart', function () {
-				this.refresh();	
-				$('.row.menu').addClass('hidden');
+				this.refresh();
+				_jApp.refresh();
 			});	
 			
 			
