--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/posts.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/posts.html
@@ -36,8 +36,7 @@
 			
 			_scroll.on('beforeScrollStart', function () {
 				this.refresh();
-				//this.currentPage.pageX 
-				//(this.pages.length-1)															
+				_jApp.refresh();												
 			});
 
 		</script>
