--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/favorites.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/favorites.html
@@ -13,8 +13,8 @@
 		<script type="text/javascript">
 			var _scroll = new IScroll('#wrapper',{click:true,preventDefault:true});
 			_scroll.on('beforeScrollStart', function () {
-				this.refresh();	
-				$('.row.menu').addClass('hidden');
+				this.refresh();
+				_jApp.refresh();
 			});	
 		</script>
 
