--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/signin.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/signin.html
@@ -48,7 +48,8 @@
 				});
 			
 			_scroll.on('beforeScrollStart', function () { 
-				this.refresh();		
+				this.refresh();
+				_jApp.refresh();
 			});	
 		</script>
 
