--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/woman.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/woman.html
@@ -9,12 +9,12 @@
 			</div>	
 		</div>
 		
-		<script type="text/javascript" src="js/hall-of-fame.js"></script>
+		<script type="text/javascript" src="js/woman.js"></script>
 		<script type="text/javascript">
 			var _scroll = new IScroll('#wrapper',{click:true,preventDefault:true});
 			_scroll.on('beforeScrollStart', function () {
-				this.refresh();	
-				$('.row.menu').addClass('hidden');
+				this.refresh();
+				_jApp.refresh();
 			});	
 		</script>
 
