Actualizaciones varias asociadas al post de vario archivos

--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/posts.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/posts.html
@@ -9,13 +9,14 @@
 				</div>				
 			</div>
 			
-			 <!-- Controls -->
-		  <a class="left carousel-control hidden" role="button">
-		    <span class="glyphicon glyphicon-chevron-left"></span>
-		  </a>
-		  <a class="right carousel-control hidden" role="button">
-		    <span class="glyphicon glyphicon-chevron-right"></span>
-		  </a>
+				<!-- Controls -->
+			  <a class="left carousel-control hidden" role="button" >
+			    <span class="glyphicon glyphicon-chevron-left"></span>
+			  </a>
+			  
+			  <a class="right carousel-control hidden" role="button">
+			    <span class="glyphicon glyphicon-chevron-right"></span>
+			  </a>
 				
 		</div>
 		
@@ -26,7 +27,8 @@
 
 			var _scroll = new IScroll('#wrapper',{
 					scrollX: true,
-					scrollY: false,					
+					scrollY: false,
+					click:true,					
 					preventDefault:true, 
 					bounce:false,
 					momentum: false,
