--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/signin.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/signin.html
@@ -25,10 +25,10 @@
 			</div>
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="text-align: center;">
-					<button type="button" class="btn btn-danger" data-touch="load" data-target="0">Experimente 7 d&iacute;as gratis!</button>
+					<button type="button" class="btn btn-danger touch-enable" data-touch="load" data-target="0">Experimente 7 d&iacute;as gratis!</button>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row"> 
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"  data-touch="load" data-target="7" style="text-align: center; position: absolute; bottom: 0;">
 					Termos e Condi&ccedil;&otilde;es
 				</div>
