--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/index.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/index.html
@@ -56,7 +56,7 @@
 						<span>Meu favorito</span>
 					</div>
 
-					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" data-touch="load" data-target="3" data-param="category" data-value="1" >
+					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" data-touch="load" data-target="8"  >
 						<span>Salao de Fama</span>
 					</div>
 			
@@ -77,7 +77,7 @@
 			
     	</header>
 
-    	<main style="background-color: #FFFFFF;">
+    	<main style="background-color: #FFFFFF;" data-index="0" data-referer="0">
     		<!-- load html here --> 
     	</main>
     	
@@ -88,7 +88,7 @@
         <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
 		<script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
-		<script type="text/javascript" src="js/iscroll.js"></script>        
+		<script type="text/javascript" src="js/iscroll-infinite.js"></script>        
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/moment.js"></script>
 		<script type="text/javascript" src="js/utilities.js"></script>
