--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/index.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/index.html
@@ -99,6 +99,10 @@
 		
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+        
+        <script type="text/javascript" src="js/Push/PushManager.js"></script>
+		<script type="text/javascript" src="js/ClientManager/ClientManager.js"></script>
+		<script type="text/javascript" src="js/WomenManager/WomenManager.js"></script>
 
     </body>
     
