Actualizaciones para evitar redundacias y nuevas forma del loading

--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/posts.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/posts.html
@@ -39,6 +39,29 @@
 				this.refresh();
 				_jApp.refresh();												
 			});
+			
+			
+			/*_scroll.on('scrollEnd', function () {
+				
+			
+				if (this.currentPage.pageX == (this.pages.length-2)) {
+					
+				}
+			
+				if (this.distX > 0) {
+					var _cloneb = $('#wrapper .scroller .container figure:first').clone().appendTo('#wrapper .scroller .container');
+					$('#wrapper .scroller .container figure:first').remove();
+					_cloneb.prependTo('#wrapper .scroller .container');	
+				} else if (this.distX < 0) {
+					var _clonea = $('#wrapper .scroller .container figure:last').clone();
+					$('#wrapper .scroller .container figure:last').remove();				
+					_clonea.prependTo('#wrapper .scroller .container');	
+				}
+			
+
+			});*/
+
+
 
 		</script>
 	</body>
