--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/signin.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/signin.html
@@ -29,7 +29,7 @@
 				</div>
 			</div>
 			<div class="row"> 
-				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"  data-touch="load" data-target="7" style="text-align: center; position: absolute; bottom: 0;">
+				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12  touch-enable"  data-touch="load" data-target="7" style="text-align: center; position: absolute; bottom: 0;">
 					Termos e Condi&ccedil;&otilde;es
 				</div>
 			</div>										
