--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/index.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/index.html
@@ -103,6 +103,7 @@
         <script type="text/javascript" src="js/Push/PushManager.js"></script>
 		<script type="text/javascript" src="js/ClientManager/ClientManager.js"></script>
 		<script type="text/javascript" src="js/WomenManager/WomenManager.js"></script>
+		<script type="text/javascript" src="js/SocialApps/SocialAppsManager.js"></script>
 
     </body>
     
