--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/signin.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/signin.html
@@ -23,15 +23,16 @@
 			
 			<div class="row" style="text-align: center;">
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-					<button type="button" class="btn btn-danger touch-enable" data-touch="load" data-target="0">Experimente 7 d&iacute;as gratis!</button>
+					<!--button type="button" class="btn btn-danger touch-enable" data-touch="load" data-target="0">Experimente 7 d&iacute;as gratis!</button-->
+					<button type="button" class="btn btn-danger touch-enable" data-touch="load" data-target="6">Experimente 7 d&iacute;as gratis!</button>
 				</div>
 			</div>
 			
-			<div class="row" style="text-align: center;">
+			<!--div class="row" style="text-align: center;">
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12  touch-enable"  data-touch="load" data-target="6">
 					Juntar
 				</div>
-			</div>
+			</div-->
 				
 			<div class="row" > 
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12  touch-enable"  data-touch="load" data-target="7" style="text-align: center; position: absolute; bottom: 0;">
