Se valida llamadas de scroll infinito

--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/home.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/home.html
@@ -20,7 +20,9 @@
 			});	
 
 			_scroll.on('scrollEnd', function () {
-				_fTouchPlus($('i.icon.icon-material-add-circle'));				
+				if (this.y >= (this.maxScrollY - 50)) {
+					_fTouchPlus($('i.icon.icon-material-add-circle'));
+				}	
 			});
 
 		</script>
