AGATADODIA: actualizaciones y mejoras en el render de los elementos y llamadas al scroll infinito

--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/categories.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/categories.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt">
 	<body>
-		
+
 		<div id="wrapper">
 			<div class="scroller">
 				<div class="container">
-					<!-- here code-->
+					<!--here code-->
 				</div>				
 			</div>	
 		</div>
@@ -13,15 +13,16 @@
 		<script type="text/javascript" src="js/categories.js"></script>
 		<script type="text/javascript">
 				 
-			var _scroll = new IScroll('#wrapper',{click:true,preventDefault:true});
+			var _scroll = new IScroll('#wrapper',{click:true,preventDefault:true, bounce: true,  probeType: 2});
+						
 			_scroll.on('beforeScrollStart', function () {
 				this.refresh();
 			});	
 
-			_scroll.on('scrollEnd', function () {
-				if (this.y >= (this.maxScrollY - 50)) {
+			_scroll.on('scroll', function () {				
+				if (this.y >= this.maxScrollY) {
 					_fTouchPlus($('i.icon.icon-material-add-circle'));
-				}				
+				}
 			});
 
 		</script>
