--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/halloffame.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/halloffame.html
@@ -5,6 +5,7 @@
 		<div id="wrapper">
 			<div class="scroller">
 				<div class="container">
+					<!--Here code-->
 				</div>				
 			</div>	
 		</div>
