--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/posts.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/posts.html
@@ -5,6 +5,7 @@
 		<div id="wrapper">			
 			<div class="scroller">
 				<div class="container">
+					<!--here code-->
 				</div>				
 			</div>
 		</div>
@@ -13,16 +14,18 @@
 		<script type="text/javascript" src="js/posts.js"></script>
 		<script type="text/javascript">
 									
-			var _scroll = new IScroll('#wrapper',{click:true,preventDefault:true, bounce: true});
+			var _scroll = new IScroll('#wrapper',{click:true,preventDefault:true, bounce: true,  probeType: 2});
+						
 			_scroll.on('beforeScrollStart', function () {
-				this.refresh();	
+				this.refresh();
 			});	
 
-			_scroll.on('scrollEnd', function () {				
-				if (this.y >= (this.maxScrollY - 50)) {
+			_scroll.on('scroll', function () {				
+				if (this.y >= this.maxScrollY) {
 					_fTouchPlus($('i.icon.icon-material-add-circle'));
-				}				
+				}
 			});
+
 			
 		</script>
 	</body>
