--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/woman.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/woman.html
@@ -5,21 +5,24 @@
 		<div id="wrapper">
 			<div class="scroller">
 				<div class="container">
+					<!--Here code-->
 				</div>				
 			</div>	
 		</div>
 		
 		<script type="text/javascript" src="js/woman.js"></script>
 		<script type="text/javascript">
-			var _scroll = new IScroll('#wrapper',{click:true,preventDefault:true});
+		
+			var _scroll = new IScroll('#wrapper',{click:true,preventDefault:true, bounce: true,  probeType: 2});
+						
 			_scroll.on('beforeScrollStart', function () {
 				this.refresh();
 			});	
-			
-			_scroll.on('scrollEnd', function () {
-				if (this.y >= (this.maxScrollY - 50)) {
+
+			_scroll.on('scroll', function () {				
+				if (this.y >= this.maxScrollY) {
 					_fTouchPlus($('i.icon.icon-material-add-circle'));
-				}			
+				}
 			});
 			
 		</script>
