--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/terms.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/terms.html
@@ -30,7 +30,7 @@
 					</div>
 					<div class="row">
 						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="text-align: center;">
-							<button type="button" class="btn btn-danger touch-enable" data-touch="load" data-target="5">de volta</button>
+							<button type="button" class="btn btn-danger touch-enable" data-touch="back">de volta</button>
 						</div>
 					</div>	
 				</div>				
