AGATADODIA: se implementa l&f de inicio

--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/index.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/index.html
@@ -80,7 +80,7 @@
 			
     	</header>
 
-    	<main style="background-color: #FFFFFF;" data-index="0" data-referer="0">
+    	<main data-index="0" data-referer="0">
     		<!-- load html here --> 
     	</main>
     	
