--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/signin.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/signin.html
@@ -5,8 +5,8 @@
 		<div class="container">
 			
 			<div class="row" >
-				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12  touch-enable"  data-touch="load" data-target="7" style="text-align: center; position: absolute; top: 35%;">
-					<h1 style="text-shadow: 2px 4px 3px rgba(0,0,0,0.3);" > A Gata Do Dia</h1>
+				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12  touch-enable"  data-touch="load" data-target="7" style="text-align: center; position: absolute; top: 35%;">					
+					<img src="img/agatadodia.svg" onerror="this.src='img/agatadodia.png'" alt="a gata do dia" style="width:100%; height: auto;">
 					<button type="button" class="btn btn-danger touch-enable" data-touch="load" data-target="6">Experimente 7 d&iacute;as gratis!</button>
 				</div>
 			</div>
