--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/init.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/init.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 	<body>
  
-		<div class="container" class="hidden">
+		<div class="container" class="hidden" style="background-color: #000000;">
 
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="text-align: center; position: absolute; top: 25%;">
