--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/offline.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/offline.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 	<body>
  
-		<div class="container">
+		<div class="container" style="background-color: #000000;">
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="text-align: center; position: absolute; top: 25%;">					
 					<img src="img/agatadodia.svg" onerror="this.src='img/agatadodia.png'" alt="a gata do dia" style="width:100%; height: auto;">
