--- a/FutbolBrasil/app/platforms/android/assets/www/index.html
+++ b/FutbolBrasil/app/platforms/android/assets/www/index.html
@@ -48,7 +48,7 @@
     		</div>			  							
     	</header>
     	
-    	<div ng-view>
+    	<div  ng-view>
     		<!-- load html here -->
     	</div> 		
 
@@ -94,8 +94,8 @@
 		
 		<!--Angular-->
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
-    	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-resource.min.js"></script>
-    	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-route.min.js"></script>    	
+    	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-route.min.js"></script>
+    	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-touch.min.js"></script>    	    	
 		<!--Angular-->
 		
 
