FUTBOLBRASIL: Actualizaciones varias asociadas al swipe, pruebas de alamacenamiento, contenido de noticias, render de secciones e iconos y  validacion del backbuttom

--- a/FutbolBrasil/app/platforms/android/assets/www/standings.html
+++ b/FutbolBrasil/app/platforms/android/assets/www/standings.html
@@ -4,7 +4,7 @@
 				<div class="container">					
 					<div class="row">		
 						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">						
-							<h5>PARTIDAS</h5>	
+							<h5>TABELA</h5>	
 						</div>
 					</div>
 										 
@@ -13,7 +13,7 @@
 		</div>
 			
 		<script type="text/javascript">												 
-			/*var _scroll = new IScroll('#wrapper',{click:true,preventDefault:true});
+		/*	var _scroll = new IScroll('#wrapper',{click:true,preventDefault:true});					
 			_scroll.on('beforeScrollStart', function () {
 				this.refresh();
 			});*/		
