AGATADODIA: se suben todas las aplicaciones antes de intentar hacer update del cordova

--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/index.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/index.html
@@ -54,11 +54,13 @@
 				<div class="row menu hidden">
 			
 					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" data-touch="load" data-target="1" >
-						<span>Meu favorito</span>
+						<!-- TEXTTAG -->
+						<span>Minhas gatas favoritas</span>
 					</div>
 
 					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" data-touch="load" data-target="8"  >
-						<span>Salao de Fama</span>
+						<!-- TEXTTAG -->
+						<span>Hall da Fama</span>
 					</div>
 							
 				</div>
@@ -90,6 +92,7 @@
 			<!-- here code footer -->
 		</footer>
         
+        <script type="text/javascript" src="js/texts.js"></script>
         <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
 		<script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
