--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/offline.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/offline.html
@@ -6,6 +6,7 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="text-align: center; position: absolute; top: 25%;">					
 					<img src="img/agatadodia.svg" onerror="this.src='img/agatadodia.png'" alt="a gata do dia" style="width:100%; height: auto;">
+					<!-- TEXTTAG -->
 					<h4 style="color:#EC2027; text-shadow: -1px 1px 1px rgba(0,0,0,0.5)" >Para desfrutar desta aplica&ccedil&atilde;o &eacute; necess&aacute;rio que esteja conectado a um ISP.</h4>									
 					<button type="button" class="btn btn-danger touch-enable"  data-touch="exit" >Deixar</button>
 				</div>
