FUTBOLBRASIL: Se implementa paginas y validaciones de secciones

--- a/FutbolBrasil/app/platforms/android/assets/www/points.html
+++ b/FutbolBrasil/app/platforms/android/assets/www/points.html
@@ -4,7 +4,7 @@
 				<div class="container">					
 					<div class="row">		
 						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">						
-							<h5>TABELA</h5>	
+							<h5>PUNTOS</h5>	
 						</div>
 					</div>
 										 
@@ -16,6 +16,6 @@
 			var _scroll = new IScroll('#wrapper',{click:true,preventDefault:true});					
 			_scroll.on('beforeScrollStart', function () {
 				this.refresh();
-			});		
+			});	
 		</script>
 		
