--- a/FutbolBrasil/app/platforms/android/assets/www/match.html
+++ b/FutbolBrasil/app/platforms/android/assets/www/match.html
@@ -13,9 +13,9 @@
 		</div>
 			
 		<script type="text/javascript">												 
-			/*var _scroll = new IScroll('#wrapper',{click:true,preventDefault:true});
+			var _scroll = new IScroll('#wrapper',{click:true,preventDefault:true});
 			_scroll.on('beforeScrollStart', function () {
 				this.refresh();
-			});*/		
+			});		
 		</script>
 		
