FUTBOLBRAIL: Se coquetea textos de seccion

--- a/FutbolBrasil/app/platforms/android/assets/www/index.html
+++ b/FutbolBrasil/app/platforms/android/assets/www/index.html
@@ -31,7 +31,7 @@
         <link rel="stylesheet" href="css/ext/material.min.css">
         <link rel="stylesheet" href="css/ext/material-wfont.min.css">
         <link rel="stylesheet" href="css/fonts/iconvault-preview.css">
-        <link rel="stylesheet" href="css/transition.css">
+
         <title>Brasil Futebol</title>
     </head>
     
@@ -48,8 +48,8 @@
 						<span style="font-size: 1.1em; font-weight: bold;  margin: 0 5px; ">PALPITES</span>
 						<img src="img/palpites.svg" style="width: auto; height: 30px; position: relative; vertical-align: middle; " />						
 					</div>
-				</div>	
-    		</div>			  							
+				</div>
+    		</div>
     	</header>
     	
     	<div  ng-view ng-swipe-right="prevPage()" ng-swipe-left="nextPage()" >
@@ -129,7 +129,7 @@
 		<!--Angular-->
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
     	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-route.min.js"></script>
-    	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-animate.min.js"></script>
+    	<!--script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-animate.min.js"></script-->
     	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-touch.min.js"></script>    	    	
 		<!--Angular-->
 		
