--- a/FutbolBrasil/app/platforms/android/assets/www/index.html
+++ b/FutbolBrasil/app/platforms/android/assets/www/index.html
@@ -129,7 +129,8 @@
 		<!--Angular-->
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
     	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-route.min.js"></script>
-    	<!--script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-animate.min.js"></script-->
+    	<!--script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-animate.min.js"></script-->    	
+    	<script src="https://rawgithub.com/gsklee/ngStorage/master/ngStorage.js"></script>
     	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-touch.min.js"></script>    	    	
 		<!--Angular-->
 		
