--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/error.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/error.html
@@ -8,7 +8,7 @@
 					<img src="img/agatadodia.svg" onerror="this.src='img/agatadodia.png'" alt="a gata do dia" style="width:100%; height: auto;">
 					<!-- TEXTTAG -->
 					<h4 style="color:#EC2027; text-shadow: -1px 1px 1px rgba(0,0,0,0.5)" >Erro ao iniciar o aplicativo.</h4>									
-					<button type="button" class="btn btn-danger touch-enable"  data-touch="exit" >Deixar</button>
+					<button type="button" class="btn btn-danger touch-enable"  data-touch="exit" >Sair</button>
 				</div>
 			</div>
 		</div>
