--- a/AGataDoDia/AGataDoDia/AGataDoDia/www/offline.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/www/offline.html
@@ -7,13 +7,13 @@
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="text-align: center; position: absolute; top: 25%;">					
 					<img src="img/agatadodia.svg" onerror="this.src='img/agatadodia.png'" alt="a gata do dia" style="width:100%; height: auto;">
 					<!-- TEXTTAG -->
-					<h4 style="color:#EC2027; text-shadow: -1px 1px 1px rgba(0,0,0,0.5)" >Erro ao iniciar o aplicativo.</h4>									
+					<h4 style="color:#EC2027; text-shadow: -1px 1px 1px rgba(0,0,0,0.5)" >Para usar este aplicativo é necessário estar conectado a internet.</h4>									
 					<button type="button" class="btn btn-danger touch-enable"  data-touch="exit" >Sair</button>
 				</div>
 			</div>
 		</div>
 		
-		<script type="text/javascript" src="js/error.js"></script>		  
+		<script type="text/javascript" src="js/offline.js"></script>		  
 		
 	</body>
 	
