FUTBOLBRASI: Implementaciones de ws de goladores, juegos, tabla de posiciones y unificacion de metodos

--- a/FutbolBrasil/app/platforms/android/assets/www/news.html
+++ b/FutbolBrasil/app/platforms/android/assets/www/news.html
@@ -1,12 +1,12 @@
-	<div ng-controller="newsCtrl as news">
+	<div ng-controller="newsCtrl as _this">
 		
 		<div id="wrapper">
 			<div class="scroller">
 				<div class="container" >						
 					<div class="row">		
-						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 news"  ng-repeat="item in news.item" ng-click="news.showContentNews(item)">						
+						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 news" ng-repeat="item in _this.item.news" ng-click="_this.showContentNews(item)">						
 							<h5 class="title" ng-bind="item.title"></h5>
-							<i class="icon icon-material-access-time " ></i>&nbsp;<span class="moment" ng-bind="news.fromNow(item.publicationDate)"></span>							
+							<i class="icon icon-material-access-time " ></i>&nbsp;<span class="moment" ng-bind="_this.fromNow(item.publicationDate)"></span>							
 						</div>
 					</div>											
 				</div>				
@@ -14,17 +14,13 @@
 		</div>
 
 		<div id="wrapper2" class="page" style="left: 100%;" >
-		
-			
-			
-			
-			
+
 			<div class="scroller">
 				<div class="container" >								
 					<div class="row" style="margin-top: 30px !important;" >								
 						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 news"  >																
 							<h3 class="title">{{contentNews.title}}</h3>	
-							<i class="icon icon-material-access-time " ></i>&nbsp;<span class="moment" >{{news.fromNow(contentNews.publicationDate)}}</span>							
+							<i class="icon icon-material-access-time" ></i>&nbsp;<span class="moment" >{{_this.fromNow(contentNews.publicationDate)}}</span>							
 							<p class="body">{{contentNews.body}}</p>																		
 						</div>
 					</div>
@@ -47,11 +43,11 @@
 									
 				
 					<div class="row">
-						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6"  ng-click="news.backPage()">
+						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6"  ng-click="_this.backPage()">
 							<i class="icon icon-material-keyboard-arrow-left" style="font-size: 1.8em; margin-left: 10px;"></i>
 						</div>		
 
-						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="text-align: right;" ng-click="news.share(contentNews)">	
+						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="text-align: right;" ng-click="_this.share(contentNews)">	
 							<i class="icon icon-material-share-alt" style="font-size: 1.8em; margin-right: 10px;" ></i>													
 						</div>
 					</div>		
