AGATADODIA: cambio menor para arreglar un problema de touch en iOS y arreglo del plugin que creamos para que no falle cuando se crea un proyecto

--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/ios/www/index.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/ios/www/index.html
@@ -53,12 +53,12 @@
 				
 				<div class="row menu hidden">
 			
-					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" data-touch="load" data-target="1" >
+					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" data-touch="load-touchend" data-target="1" >
 						<!-- TEXTTAG -->
 						<span>Minhas gatas favoritas</span>
 					</div>
 
-					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" data-touch="load" data-target="8"  >
+					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" data-touch="load-touchend" data-target="8"  >
 						<!-- TEXTTAG -->
 						<span>Hall da Fama</span>
 					</div>
