FUBTOLBRASIL: Desarollo de vistas, implementacion de funciones de validacion de elementos

--- a/FutbolBrasil/app/platforms/android/assets/www/index.html
+++ b/FutbolBrasil/app/platforms/android/assets/www/index.html
@@ -31,6 +31,7 @@
         <link rel="stylesheet" href="css/ext/material.min.css">
         <link rel="stylesheet" href="css/ext/material-wfont.min.css">
         <link rel="stylesheet" href="css/fonts/iconvault-preview.css">
+        <!--link rel="stylesheet" href="css/animate.css"-->
 
         <title>Brasil Futebol</title>
     </head>
