FUTBOLBRASIL: Actualizaciones varias asociadas a los mensjes de error, loading, set de clases style asociadas al control

--- a/FutbolBrasil/app/platforms/android/assets/www/points.html
+++ b/FutbolBrasil/app/platforms/android/assets/www/points.html
@@ -2,12 +2,7 @@
 		<div id="wrapper" >
 			<div class="scroller">
 				<div class="container">					
-					<div class="row">		
-						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">						
-							<h5>PUNTOS</h5>	
-						</div>
-					</div>
-										 
+					<!-- here code-->
 				</div>				
 			</div>
 		</div>
