--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/theme.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/theme.html
@@ -10,7 +10,7 @@
 			</div>	
 		</div>
 		
-		<script type="text/javascript" src="js/woman.js"></script>
+		<script type="text/javascript" src="js/theme.js"></script>
 		<script type="text/javascript">
 		
 			var _scroll = new IScroll('#wrapper',{click:true,preventDefault:true, bounce: true,  probeType: 2});
