MEMEPEDIA: cambio de nombre del proyecto de AGataDoDia a Memepedia

--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/index.html
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/index.html
@@ -112,6 +112,8 @@
 		<script type="text/javascript" src="js/ClientManager/ClientManager.js"></script>
 		<script type="text/javascript" src="js/ThemeManager/ThemeManager.js"></script>
 		<script type="text/javascript" src="js/SocialApps/SocialAppsManager.js"></script>
+		
+		<script type="text/javascript" src="js/Upstream/UpstreamManager.js"></script>
 
     </body>
     
