--- a/FutbolBrasil/app/platforms/android/assets/www/news.html
+++ b/FutbolBrasil/app/platforms/android/assets/www/news.html
@@ -43,7 +43,7 @@
 							border: 0;">
 									
 				
-					<div class="row">
+					<div class="row" style="margin-top: 10px !important;">
 						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6"  ng-click="_this.backPage()">
 							<i class="icon icon-material-keyboard-arrow-left" style="font-size: 1.8em; margin-left: 10px;"></i>
 						</div>		
