--- a/Memepedia/Memepedia/Memepedia/platforms/android/assets/www/init.html
+++ b/Memepedia/Memepedia/Memepedia/platforms/android/assets/www/init.html
@@ -7,7 +7,7 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="text-align: center; position: absolute; top: 25%;">
 					
-					<img src="img/agatadodia.svg" onerror="this.src='img/agatadodia.png'" alt="a gata do dia" style="width:100%; height: auto;">
+					<img src="img/agatadodia.svg" onerror="this.src='img/agatadodia.png'" alt="Memepedia" style="width:100%; height: auto;">
 					
 					<div id="msisdnInputGroup">
 						<!-- TEXTTAG -->
