--- a/Memepedia/Memepedia/Memepedia/platforms/android/assets/www/offline.html
+++ b/Memepedia/Memepedia/Memepedia/platforms/android/assets/www/offline.html
@@ -5,7 +5,7 @@
 		<div class="container" style="background-color: #000000;">
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="text-align: center; position: absolute; top: 25%;">					
-					<img src="img/agatadodia.svg" onerror="this.src='img/agatadodia.png'" alt="Memepedia" style="width:100%; height: auto;">
+					<img src="img/memepedia.svg" onerror="this.src='img/memepedia.png'" alt="Memepedia" style="width:100%; height: auto;">
 					<!-- TEXTTAG -->
 					<h4 style="color:#EC2027; text-shadow: -1px 1px 1px rgba(0,0,0,0.5)" >Para usar este aplicativo é necessário estar conectado a internet.</h4>									
 					<button type="button" class="btn btn-danger touch-enable"  data-touch="exit" >Sair</button>
