--- a/FutbolBrasil/app/platforms/android/assets/www/standings.html
+++ b/FutbolBrasil/app/platforms/android/assets/www/standings.html
@@ -14,7 +14,7 @@
 				 		data-index="{{$index}}"
 				 		ng-repeat="item in _this.item.rankings" 
 				 		ng-class="{'active' : $first}"
-				 		ng-if="removeElement(item.ranks)">
+				 		ng-if="removeElement(item.ranks)" my-scroll>
 
 						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >						
 							<table class="table">								
@@ -84,10 +84,4 @@
 		</div>
 		
 	</div>	
-	<script type="text/javascript">												 
-		var _scroll = new IScroll('#wrapper',{click:true,preventDefault:true});					
-		_scroll.on('beforeScrollStart', function () {
-			this.refresh();
-		});		
-	</script>
 		
