MEMEPEDIA: plugin para llamadas ssl

--- a/Memepedia/Memepedia/Memepedia/platforms/android/assets/www/index.html
+++ b/Memepedia/Memepedia/Memepedia/platforms/android/assets/www/index.html
@@ -76,7 +76,7 @@
 		<footer>			
 			<!-- here code footer -->
 		</footer>
-        
+        <script type="text/javascript" src="js/WebManager/WebManager.js"></script>
         <script type="text/javascript" src="js/texts.js"></script>
         <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
