MEMETECA: cambio menor

--- a/Memepedia/Memepedia/Memepedia/platforms/android/assets/www/index.html
+++ b/Memepedia/Memepedia/Memepedia/platforms/android/assets/www/index.html
@@ -31,7 +31,7 @@
         <link rel="stylesheet" href="css/material.min.css">
         <link rel="stylesheet" href="css/material-wfont.min.css">
      	<link rel="stylesheet" href="css/iconvault-preview.css">
-        <title>Memepedia</title>
+        <title>Memeteca</title>
     </head>
     
     <body class="content-init not-header" style="position: fixed; background-color: white;">
@@ -42,7 +42,7 @@
 				
 				<div class="row">					
 					<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10" style="text-align: left;" data-touch="load" data-target="0">
-						<img src="img/memepedia.svg" onerror="this.src='img/memepedia.png'" alt="Memepedia" style="width:50%; height: auto; vertical-align: middle;">				
+						<img src="img/memeteca.svg" onerror="this.src='img/memeteca.png'" alt="Memeteca" style="width:50%; height: auto; vertical-align: middle;">				
 					</div>
 					<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2" >						
 						<i class="icon-menu" data-touch="menu" style="color:#F6921E;  text-align: center; vertical-align: middle;"></i>						
