MEMETECA: Merge de cambios entre android y iOS para que los futuros merge sean mas sencillos

--- a/Memepedia/Memepedia/Memepedia/platforms/android/assets/www/index.html
+++ b/Memepedia/Memepedia/Memepedia/platforms/android/assets/www/index.html
@@ -50,17 +50,17 @@
 				</div>
 				
 				<div class="row menu hidden">
-			
+					<!-- IOS ONLY font-size:.7em and load-touchend-->
 					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" data-touch="load" data-target="1" >
 						<!-- TEXTTAG -->
 						<span style="font-size:.8em">Favoritos</span>
 					</div>
-
+					<!-- IOS ONLY font-size:.7em and load-touchend-->
 					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" data-touch="load" data-target="8"  >
 						<!-- TEXTTAG -->
 						<span style="font-size:.8em">Hall da Fama</span>
 					</div>
-					
+					<!-- IOS ONLY font-size:.7em and load-touchend-->
 					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" data-touch="load" data-target="11"  >
 						<!-- TEXTTAG -->
 						<span style="font-size:.8em">Configuração</span>
