--- a/Memepedia/Memepedia/Memepedia/platforms/android/assets/www/init.html
+++ b/Memepedia/Memepedia/Memepedia/platforms/android/assets/www/init.html
@@ -11,7 +11,7 @@
 					
 					<div id="msisdnInputGroup">
 						<!-- TEXTTAG -->
-						<h4 style="color:#F6921E; text-shadow: -1px 1px 1px rgba(0,0,0,0.5)" >Registre-se para acessar as fotos das melhores gatas, todos os dias.</h4>
+						<h4 style="color:#F6921E; text-shadow: -1px 1px 1px rgba(0,0,0,0.5)" >Registre-se para acessar as fotos das melhores memes, todos os dias.</h4>
 						<h4 style="color:#F6921E; text-shadow: -1px 1px 1px rgba(0,0,0,0.5)" >Digite seu numero de celular.</h4>
 						
 						<div class="form-control-wrapper">
