--- a/Memepedia/Memepedia/Memepedia/platforms/android/assets/www/offline.html
+++ b/Memepedia/Memepedia/Memepedia/platforms/android/assets/www/offline.html
@@ -8,6 +8,7 @@
 					<img src="img/memeteca.svg" onerror="this.src='img/memeteca.png'" alt="Memeteca" style="width:100%; height: auto;">
 					<!-- TEXTTAG -->
 					<h4 style="color:#EC2027; text-shadow: -1px 1px 1px rgba(0,0,0,0.5)" >Para usar este aplicativo é necessário estar conectado a internet.</h4>									
+					<!-- IOS ONLY data-touch="retry" -->
 					<button type="button" class="btn btn-danger touch-enable"  data-touch="exit" >Sair</button>
 				</div>
 			</div>
